Fixed the issue with the title not showing the same font size.

--- a/css/style01.css
+++ b/css/style01.css
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 div.briefs-wrap > b > a {
-  font-size: 24px;
+  font-size: 24px !important;
 }
 
 .wpp_position{
